vue-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-deployment
  labels:
    app: vue-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-deployment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: vue-deployment
    spec:
      containers:
      - name: vue-deployment
        image: swara1214/frontend_engine
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
