django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
spec:
  selector:
    app: django-deployment
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 31200
