vue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vue-svc
spec:
  selector:
    app: vue-deployment
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31201
